--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root" class="container" style="padding-top: 10px"></div>
 <script type="text/javascript" src="/bundle.js"></script>
 </body>
 </html>
